Fix logo color in dark mode (#60)

--- a/source/sass/components/_logo.scss
+++ b/source/sass/components/_logo.scss
@@ -1,8 +1,8 @@
 .logo {
-  border-right: 1px solid #F2F2F2;
   grid-area: logo;
 
   @media screen and (min-width: map-get($breakpoint, "large")) {
+    border-right: 1px solid #F2F2F2;
     padding-top: var(--scale2);
     padding-left: var(--scale1);
   }
@@ -11,7 +11,7 @@
     fill: var(--color-type);
 
     @media screen and (prefers-color-scheme: dark) {
-      --color-type: #{map-get($colors-palette, "white")};
+      --color-type: #{map-get($colors-palette, white)};
     }
   }
 }
